--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -1,10 +1,12 @@
 footer {
     height: 60px;
     width: 100%;
-    background-color: #00FF00;
     border-top: 1px solid #CCCCCC;
     display: flex;
     align-items: center;
     justify-content: center;
-    color: white;
+    color: rgb(0, 0, 0);
+    position: fixed;
+    bottom: 0;
+    left: 0;
 }
