--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -1,4 +1,4 @@
-.filters {
+.filters{
     background-color: white;
     height: 70px;
     width: 100%;
@@ -7,7 +7,7 @@
     text-align: right;
 }
 
-section.filters button {
+section.filters button{
     margin-top: 11px;
     margin-bottom: 11px;
     margin-right: 30px;
@@ -19,57 +19,73 @@ section.filters button {
     border: none;
     border-radius: 4px;
 }
-
 section.filters button:hover {
     opacity: 0.9;
 }
-
-.locations,
-.amenities {
+.locations{
+    text-align: left;
     height: 100%;
     width: 25%;
     border-right: solid 1px #DDDDDD;
-    position: relative;
     float: left;
-    text-align: left;
 }
-
-.locations h3,
-.amenities h3 {
+.amenities{
+    text-align: left;
+    align-content: flex-start;
+    height: 100%;
+    width: 25%;
+    float: left;
+}
+.amenities h3, .locations h3{
     font-weight: 600;
-    margin: 0;
+    margin: 0px;
     margin-top: 17px;
-    padding: 0;
+    padding: 0px;
     padding-left: 30px;
 }
-
-.locations h4,
-.amenities h4 {
-    margin: 0;
-    padding: 0;
+.amenities h4, .locations h4{
+    margin: 0px;
+    padding: 0px;
     font-weight: 400;
     font-size: 14px;
     padding-left: 30px;
 }
-
-.popover {
-    display: none;
-    position: absolute;
+.popover{
+    visibility: hidden;
+    position: relative;
     background-color: #FAFAFA;
     border: solid #DDDDDD 1px;
     border-radius: 4px;
-    width: 100%;
-    padding-bottom: 10px;
-    padding-top: 10px;
+    margin-top: 7%;
+    padding-bottom: 10%;
     z-index: 1;
 }
-
-.popover li {
+.popover li h2{
+    padding: 0;
+    margin: 0;
+}
+.popover_list{
+    padding:0px;
+    margin:0px;
+    padding-left: 10%;
+}
+li{
     list-style-type: none;
     padding-bottom: 5%;
 }
+ul{
+    padding-top: 30px;
+}
+.locations:hover >.popover{
+    visibility: visible;
+    margin-bottom: 50px;
+}
 
-.locations:hover .popover,
-.amenities:hover .popover {
-    display: block;
+.amenities:hover > .popover{
+    visibility: visible;
+}
+
+
+ul {
+  list-style: none;
 }
